--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   },
   "name": "starter",
   "version": "1.0.0",
-  "main": "another.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx parcel index.html",
+    "build": "npx parcel build index.html"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "parcel": "^2.11.0"
+  }
 }
